backend/k8s/service.yaml
# =========================
# Service for sk066-backend
# =========================
apiVersion: v1
kind: Service
metadata:
  name: sk066-backend
  namespace: skala-practice
spec:
  selector:
    app: sk066-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
