backend/k8s/ingress.yaml
# =========================
# Ingress for sk066-backend
# =========================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk066-backend-ingress
  namespace: skala-practice
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk066-backend.skala25a.project.skala-ai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sk066-backend
            port:
              number: 8080
  tls:
  - hosts:
    - sk066-backend.skala25a.project.skala-ai.com
    secretName: sk066-backend-tls-cert
